changed width from 358px to auto, to avoid favorite-tags overflow the right column

--- a/src/less/prefabs/item/item-tags.less
+++ b/src/less/prefabs/item/item-tags.less
@@ -12,7 +12,8 @@
   font-size: 0; // Trick to fix a Firefox bug.
   margin-left: -1px;
   float: left;
-  width: 358px !important;
+  //width: 358px !important;
+  width: auto;
   .user-select(none);
 }
 
